# digital-twin-lite

./: .gitignore  README.md
answers/: next_class.md  topic_primer.md
db/: chroma.sqlite3
src/twin_lite/: crew.py  main.py
twin_lite/: README.md  pyproject.toml  requirements.txt  test_interaction.py
twin_lite/answers/: assignments.md  next_class.md  weekly_plan.md
twin_lite/src/twin_lite/: crew.py  main.py
