[project]
name = "twin_lite"
version = "0.1.0"
description = "twin-lite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
twin_lite = "twin_lite.main:run"
run_crew = "twin_lite.main:run"
train = "twin_lite.main:train"
replay = "twin_lite.main:replay"
test = "twin_lite.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
